# 7aside_footbal_analytics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pages.yml
context/: AGENTS.md  DATA_SOURCES.md  PROJECT.md  SCHEMA.md
data/processed/: games.json
docs/: index.html
scripts/: build_static.py  dump_messenger_messages.py  list_messenger_groups.py  process_games.py  seed_example.py
src/football_analytics/: __init__.py  cli.py  garmin_client.py  messenger_client.py  names.py  web.py
src/football_analytics/analysis/: __init__.py  player_stats.py  team_stats.py
src/football_analytics/models/: __init__.py  game.py  player.py
src/football_analytics/parsers/: __init__.py  garmin.py  messenger.py
src/football_analytics/reports/: __init__.py  summary.py
src/football_analytics/templates/: index.html
