[project]
name = "footbal-analytics"
version = "0.1.0"
description = "Football group game tracker — team/player insights from Garmin Connect logs"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "rich>=13.0",
    "typer>=0.12",
    "pydantic>=2.0",
]

[project.scripts]
football = "football_analytics.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/football_analytics"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
